--- a/index.html
+++ b/index.html
@@ -327,36 +327,43 @@
 <br><br>
 
 <section class="container-fluid bg-expert">
-  <div class="container">
-    <div class="row itms">
-      <div class="col-md-4 col-sm-12"><br><br>
-        <span class="display-6">Our expert</span>
-        <p class=" py-5 h5"> <ins>Farrukh Korchiev</ins> </p>
-      </div>
-    </div>
-    <div class="row itms">
-      <div class="col-3">
-        <h5>Work experence:</h5>
-        <p class="text-muted">15 years</p>
-      </div>
-      <div class="col-3">
-        <h5>Specialty:</h5>
-        <p class="text-muted">Candidate of English</p>
-      </div>
-    </div>
+  <!-- <div class="container"> -->
+    <div class="row align-items-end">
+      <div class="col-1 col-xs-12"></div>
+      <div class="col-md-6 col-xs-12">
+        <div class="row itms">
+          <div class="col-lg-5 col-xs-12"><br><br>
+            <span class="display-6">Our expert</span>
+            <p class=" py-5 h5"> <ins>Daniel Jonson</ins> </p>
+          </div>
+        </div>
+        <div class="row itms">
+          <div class="col-lg-5 col-6">
+            <h5>Work experence:</h5>
+            <p class="text-muted">15 years</p>
+          </div>
+          <div class="col-lg-5 col-6">
+            <h5>Specialty:</h5>
+            <p class="text-muted">Candidate of English</p>
+          </div>
+        </div>
+        <div class="row itms">
+          <div class="col-lg-5 col-6">
+            <h5>Referance:</h5>
+            <p class="text-muted">University of World <br>  Languages</p>
+          </div>
+          <div class="col-lg-5 col-6">
+            <h5>Specialty:</h5>
+            <p class="text-muted">Candidate of English</p>
+          </div>
 
-
-    <div class="row itms">
-      <div class="col-3">
-        <h5>Referance:</h5>
-        <p class="text-muted">University of World <br>  Languages</p>
+        </div>
       </div>
-      <div class="col-md-4 col-sm-12">
-        <h5>Specialty:</h5>
-        <p class="text-muted">Candidate of English</p>
+      <div class="col-md-5 col-xs-12 p-0 text-end">
+          <img src="images/our_expert.png" class="img-fluid" alt="">
       </div>
     </div>
-  </div>
+  <!-- </div> -->
 </section>
 
 <section class="container">
@@ -517,25 +524,23 @@
           <p>Birthday</p>
 
           <div class="row align-items-center">
-    <div class="col-3">
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-        <label class="form-check-label" for="flexRadioDefault1">
-          Man
-        </label>
-     </div>
-    </div>
-    <div class="col">
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
-          Woman
-        </label>
-      </div>
-    </div>
-  </div>
-
-
+            <div class="col-3">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  Man
+                </label>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                  Woman
+                </label>
+              </div>
+            </div>
+          </div>
           <div class="d-grid gap-2 col-9 mx-auto">
             <button type="submit" class="btn btn-primary">Sign up</button>
           </div>
