--- a/prise.html
+++ b/prise.html
@@ -52,8 +52,8 @@
     </div>
 
 
-    <div class="row">
-      <div class="col">
+    <div class="row itms">
+      <div class="col-lg-4 col-12">
         <div class="shadow">
           <div class="row p-3 coli_wiz">
             <div class="col-12">
@@ -105,7 +105,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col-lg-4 col-12">
         <div class="shadow">
           <div class="row p-3 coli_wiz">
             <div class="col-12">
@@ -171,7 +171,7 @@
         </div>
       </div>
 
-      <div class="col coli_wiz">
+      <div class="col-lg-4 col-12">
         <div class="shadow">
           <div class="row p-3 coli_wiz">
             <div class="col-12">
