--- a/offers.html
+++ b/offers.html
@@ -16,20 +16,18 @@
     <nav class="navbar navbar-expand-lg border-bottom shadow1 navbar-light bg-light">
   <div class="container-fluid gx-5">
     <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <div class="collapse navbar-collapse">
-      <div class="col-1"></div>
+      <div class="col-2"></div>
         <h4>English for Beginners - Learn English easily and perfectly</h4>
-        <div class=" col prog-pratsent text-center">
-          <strong class="pratsent">85%</strong>
+        <div class=" col-1 prog-pratsent text-center">
+          FK
         </div>
       <div class="col-1"></div>
       <ul class="navbar-nav col-md-auto">
-
       </ul>
-
     </div>
   </div>
 </nav>
@@ -139,39 +137,381 @@
       <h4>Course plan</h4>
 
       <div class="accordion" id="accordionPanelsStayOpenExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-        Accordion Item #1
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-      <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#akardion_panel1" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit:1.How to skype to etach englis...
+                </div>
+                <div class="text-muted starfont">
+                   1/3 1h 60min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </button>
+          </h2>
+          <div id="akardion_panel1" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+            <div class="accordion-body">
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-2 align-self-center">
+                <i class="fas fa-check checkbg"></i>
+              </div>
+              <div class="col-10 p">
+                <div class="text-truncate">
+                  Unit 1.1: Let's get acquanited with nat.
+                </div>
+                <div class="text-muted starfont">
+                  <i class="far fa-play-circle"></i> 2 videos/5min
+                </div>
+                <div class="">
+                  <span class="course-stars starfont">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star text-muted"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-        Accordion Item #2
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#akardion_panel2" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit:1.How to skype to etach englis...
+          </div>
+          <div class="text-muted starfont">
+             1/3 1h 60min
+          </div>
+          <div class="">
+            <span class="text-muted starfont">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+    <div id="akardion_panel2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
       <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star text-muted"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row lesson-inactive">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row lesson-inactive">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
   </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-        Accordion Item #3
+        <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#akardion_panel3" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit:1.How to skype to etach englis...
+          </div>
+          <div class="text-muted starfont">
+             1/3 1h 60min
+          </div>
+          <div class="">
+            <span class="text-muted starfont">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+    <div id="akardion_panel3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
       <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2 align-self-center">
+          <i class="fas fa-check checkbg"></i>
+        </div>
+        <div class="col-10 p">
+          <div class="text-truncate">
+            Unit 1.1: Let's get acquanited with nat.
+          </div>
+          <div class="text-muted starfont">
+            <i class="far fa-play-circle"></i> 2 videos/5min
+          </div>
+          <div class="">
+            <span class="course-stars starfont">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </span>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
   </div>
@@ -189,7 +529,26 @@
 
 
 
-
+<div class="row">
+  <div class="col-md-auto align-self-center">
+    <i class="fas fa-check checkbg"></i>
+  </div>
+  <div class="col">
+    <div class="text-truncate">
+      Unit 1.1: Let's get acquanited with nat.
+    </div>
+    <div class="text-muted starfont">
+      <i class="far fa-play-circle"></i> 2 videos/5min
+    </div>
+    <div class="">
+      <span class="course-stars starfont">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="far fa-star"></i>
+      </span>
+    </div>
+  </div>
+</div>
 
 
 
@@ -276,7 +635,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
