--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
     </div>
   </div>
-</section><br><br><br><br><br>
+</section><br>
 
 <section class="container-fluid gulugulu">
   <div class="container">
@@ -319,12 +319,12 @@
       </div>
     </div>
   </div>
-</section><br><br>
+</section><br>
 
 <section class="container text-center p-5">
     <a href="#" class="btn btn-info btn-lg btn-more">More stories</a>
 </section>
-<br><br>
+<br>
 
 <section class="container-fluid bg-expert">
   <!-- <div class="container"> -->
@@ -332,7 +332,7 @@
       <div class="col-1 col-xs-12"></div>
       <div class="col-md-6 col-xs-12">
         <div class="row itms">
-          <div class="col-lg-5 col-xs-12"><br><br>
+          <div class="col-lg-5 col-xs-12"><br>
             <span class="display-6">Our expert</span>
             <p class=" py-5 h5"> <ins>Daniel Jonson</ins> </p>
           </div>
@@ -408,7 +408,7 @@
       </div>
     </div>
   </div>
-</section><br><br><br>
+</section><br>
 
 <section class="container-fluid border-top top-fut">
   <div class="container">
@@ -504,12 +504,12 @@
         <form>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">First name</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
 
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Last name</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
 
           <div class="mb-3">
@@ -519,7 +519,7 @@
 
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">you pofession</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
           <p>Birthday</p>
 
