--- a/offers.html
+++ b/offers.html
@@ -53,6 +53,7 @@
                     <b>Your progress</b>
                 </div>
                 <div class="col">
+                    <div class="text-end">130/200</div>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -109,7 +110,7 @@
                                     </ul>
 
                                     <nav class="row">
-                                        <ul class="pagination">
+                                        <ul class="pagination text-center">
                                             Questions
                                             <li class="page-item active" aria-current="page">
                                                 <span class="page-link">1</span>
@@ -190,11 +191,11 @@
                                     1/3 1h 60min
                                 </div>
                                 <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                  <span class="course-stars starfont">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star text-muted"></i>
+                                  </span>
                                 </div>
                             </div>
                         </button>
@@ -214,11 +215,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -234,11 +235,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -254,11 +255,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -274,11 +275,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -294,11 +295,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -314,11 +315,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-                  <span class="course-stars starfont">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star text-muted"></i>
-                  </span>
+                                      <span class="course-stars starfont">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star text-muted"></i>
+                                      </span>
                                     </div>
                                 </div>
                             </div>
@@ -333,17 +334,17 @@
 
                             <div class="col-10 p">
                                 <div class="text-truncate">
-                                    Unit:1.How to skype to etach englis...
+                                    Unit:2.How to skype to etach englis...
                                 </div>
                                 <div class="text-muted starfont">
                                     1/3 1h 60min
                                 </div>
                                 <div class="">
-            <span class="text-muted starfont">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                    <span class="text-muted starfont">
+                                      <i class="far fa-star"></i>
+                                      <i class="far fa-star"></i>
+                                      <i class="far fa-star"></i>
+                                    </span>
                                 </div>
                             </div>
                         </button>
@@ -363,11 +364,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star text-muted"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star text-muted"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -383,11 +384,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="far fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -403,11 +404,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="far fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -422,17 +423,17 @@
 
                             <div class="col-10 p">
                                 <div class="text-truncate">
-                                    Unit:1.How to skype to etach englis...
+                                    Unit:3.How to skype to etach englis...
                                 </div>
                                 <div class="text-muted starfont">
                                     1/3 1h 60min
                                 </div>
                                 <div class="">
-            <span class="text-muted starfont">
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                    <span class="text-muted starfont">
+                                      <i class="far fa-star"></i>
+                                      <i class="far fa-star"></i>
+                                      <i class="far fa-star"></i>
+                                    </span>
                                 </div>
                             </div>
                         </button>
@@ -452,11 +453,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -472,11 +473,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -492,11 +493,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -512,11 +513,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -532,11 +533,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -552,11 +553,11 @@
                                         <i class="far fa-play-circle"></i> 2 videos/5min
                                     </div>
                                     <div class="">
-            <span class="course-stars starfont">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </span>
+                                        <span class="course-stars starfont">
+                                          <i class="fas fa-star"></i>
+                                          <i class="fas fa-star"></i>
+                                          <i class="far fa-star"></i>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -569,28 +570,6 @@
         </div>
     </div>
 </section>
-
-
-<div class="row">
-    <div class="col-md-auto align-self-center">
-        <i class="fas fa-check checkbg"></i>
-    </div>
-    <div class="col">
-        <div class="text-truncate">
-            Unit 1.1: Let's get acquanited with nat.
-        </div>
-        <div class="text-muted starfont">
-            <i class="far fa-play-circle"></i> 2 videos/5min
-        </div>
-        <div class="">
-      <span class="course-stars starfont">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="far fa-star"></i>
-      </span>
-        </div>
-    </div>
-</div>
 
 
 <section class="container-fluid">
