--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
                 <button class="visually-hidden" type="submit"></button>
             </form>
-
         </div>
     </div>
 </nav>
@@ -85,9 +84,36 @@
         <div class="coueses">
             <h1 class="aftr" id="scrollspyHeading1">Courses</h1>
         </div>
-        <div class="owl-carousel carousel">
+        <div class="owl-carousel corusel-width carousel">
             <div class="">
-                <div class="shadow carousel-inner d-block">
+                <div class="shadow widthcours carousel-inner d-block">
+                    <img src="images/teacher.jpg" class="img-fluid" alt="">
+                    <div class="p-3">
+                        <h5><strong class="kurs-title">English for Beginners - Learn English<br>
+                            easiliy and perfectly</strong></h5>
+                        <p>By Diana Akhnedova</p>
+                        <p class="text-muted kurs-desc">
+                            for those who want to start English form scratch, you <br>
+                            canvasan study in new courses
+                        </p>
+                        <p><strong class="numb">3.7</strong>
+                            <span class="course-stars">
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star"></i>
+                   <i class="fas fa-star-half-alt"></i>
+                   <i class="far fa-star"></i>
+                 </span>
+                            <span class="text-muted">(583 ratings) </span>
+                        </p>
+                        <p class="text-muted">
+                            Students joined 1,262
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
                         <h5><strong class="kurs-title">English for Beginners - Learn English<br>
@@ -114,36 +140,8 @@
                 </div>
 
             </div>
-            <div class="">
-                <div class="shadow">
-                    <img src="images/teacher.jpg" class="img-fluid" alt="">
-                    <div class="p-3">
-                        <h5><strong class="kurs-title">English for Beginners - Learn English<br>
-                            easiliy and perfectly</strong></h5>
-                        <p>By Diana Akhnedova</p>
-                        <p class="text-muted kurs-desc">
-                            for those who want to start English form scratch, you <br>
-                            canvasan study in new courses
-                        </p>
-                        <p><strong class="numb">3.7</strong>
-                            <span class="course-stars">
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star"></i>
-                   <i class="fas fa-star-half-alt"></i>
-                   <i class="far fa-star"></i>
-                 </span>
-                            <span class="text-muted">(583 ratings) </span>
-                        </p>
-                        <p class="text-muted">
-                            Students joined 1,262
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="">
-                <div class="shadow">
+            <div class="widthcours">
+                <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
                         <h5><strong class="kurs-title">English for Beginners - Learn English<br>
@@ -169,8 +167,8 @@
                     </div>
                 </div>
             </div>
-            <div class="">
-                <div class="shadow">
+            <div class="widthcours">
+                <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
                         <h5><strong class="kurs-title">English for Beginners - Learn English<br>
@@ -196,8 +194,8 @@
                     </div>
                 </div>
             </div>
-            <div class="">
-                <div class="shadow">
+            <div class="widthcours">
+                <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
                         <h5><strong class="kurs-title">English for Beginners - Learn English<br>
