--- a/experises.html
+++ b/experises.html
@@ -18,11 +18,12 @@
 <nav class="navbar navbar-expand-lg border-bottom navbar-light bg-light">
     <div class="container-fluid gx-5">
         <!--        <div class="row">-->
-        <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
+        <a class="navbar-brand vectorad" href="#"> <img src="images/vector.png" alt="" width="20">  </a>
+        <a class="navbar-brand nosarch" href="#"> <img src="images/logo.png" alt="" width="60">  </a>
 
         <div class="col-1"></div>
         <div class="col text-truncate" data-bs-toggle="tooltip" data-bs-placement="bottom"
-             title="English for Beginners - Learn English easily and perfectly">
+             title="English for Beginners - Learn English easily and perfectly text-truncate">
             <h4>English for Beginners - Learn English easily and perfectly</h4>
         </div>
         <div class="col-1"></div>
@@ -66,14 +67,14 @@
 
                         <div class="vid">
                             <div class="tab-content">
-                                <div class="tab-pane fade show active" id="vid1-tab" role="tabpanel"
+                                <div class="tab-pane fade show widthful active" id="vid1-tab" role="tabpanel"
                                      aria-labelledby="profile-tab">
                                     <div class="ratio ratio-16x9">
                                         <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
                                                 title="YouTube video" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade" id="vid2-tab" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="tab-pane widthful fade" id="vid2-tab" role="tabpanel" aria-labelledby="profile-tab">
                                     <div class="ratio ratio-16x9">
                                         <iframe src="https://www.youtube.com/embed/ysSxxIqKNN0?rel=0"
                                                 title="YouTube video" allowfullscreen></iframe>
@@ -273,7 +274,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3 p-0">
+        <div class="col-3 p-0 nosarch">
             <div class="col">
                 <div class="section-header row align-items-center px-5 m-0">
                     <div class="row">
@@ -296,7 +297,6 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#akardion_panel1" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-
                             <div class="col-10 p">
                                 <div class="text-truncate">
                                     Unit:1.How to skype to etach englis...
