--- a/prise.html
+++ b/prise.html
@@ -14,42 +14,51 @@
   </head>
   <body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg border-bottom shadow1 navbar-light bg-light">
-  <div class="container-fluid gx-5">
-    <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse">
-      <div class="col-1"></div>
-      <form class="col">
-        <div class="topsearch">
-          <i class="fas fa-search"></i>
+  <nav class="custom-nav navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid gx-5">
+      <div class="row nav-row">
+        <div class="col-auto">
+          <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="" width="60"> </a>
         </div>
-        <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
-        <button class="visually-hidden" type="submit"></button>
-      </form>
-      <div class="col-1"></div>
-      <ul class="navbar-nav col-md-auto">
-        <li class="nav-item btn btn-light">
-          <a class="nav-link active" aria-current="page" href="#">Courses</a>
-        </li>
-        <li class="nav-item btn btn-light">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-      <div class="col-1"></div>
-      <div class="col-md-auto d-flex">
-        <div class="prog-pratsent row">
-          <div class="col align-self-center text-center">
-            <b>FK</b>
+        <div class="col">
+          <div class="row justify-content-end" id="navbarSupportedContent">
+            <div class="col-1 hidden-sm"></div>
+            <form class="col align-items-center d-flex hidden-sm">
+              <div class="topsearch">
+                <i class="fas fa-search"></i>
+              </div>
+              <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
+              <button class="visually-hidden" type="submit"></button>
+            </form>
+            <div class="col-1 hidden-sm"></div>
+
+            <ul class="nav col-md-auto inline-nav">
+
+              <li class="nav-item btn btn-light">
+                <a class="nav-link active nav-link " aria-current="page" href="#scrollspyHeading1">Courses</a>
+              </li>
+
+              <li class="nav-item btn btn-light">
+                <a class="nav-link active nav-link " aria-current="page" href="#scrollspyHeadingAbout">About</a>
+              </li>
+
+            </ul>
+            <div class="col-auto text-center align-items-center d-flex">
+              <a href="#" class=" btn btn-primary sign-in-button nav-item" data-bs-toggle="modal"
+                 data-bs-target="#exampleModal">Sing in</a>
+            </div>
           </div>
         </div>
+        <form class="col-12 align-items-center hidden-search hidden-lg nosarch">
+          <div class="topsearch">
+            <i class="fas fa-search"></i>
+          </div>
+          <input class="form-control me-2 inp-bord" type="search" placeholder="" aria-label="Search">
+          <button class="visually-hidden" type="submit"></button>
+        </form>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 <section class="container-fluid">
   <div class="container">
