--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
 
             </div>
-            <div class="widthcours">
+            <div class="">
                 <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </div>
-            <div class="widthcours">
+            <div class="">
                 <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
@@ -194,7 +194,7 @@
                     </div>
                 </div>
             </div>
-            <div class="widthcours">
+            <div class="">
                 <div class="shadow widthcours">
                     <img src="images/teacher.jpg" class="img-fluid" alt="">
                     <div class="p-3">
