--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <!--Courses-->
 <section class="container-fluid">
-    <div class="container scrollspy-example" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0"
+    <div class="container courses ccarousel scrollspy-example" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0"
          tabindex="0">
         <div class="coueses">
             <h1 class="aftr" id="scrollspyHeading1">Courses</h1>
@@ -333,7 +333,7 @@
 
 <!--Sanjar Aripov-->
 <section class="container-fluid">
-    <div class="container">
+    <div class="container ccarousel">
         <div class="coueses">
             <h1 class="aftr">Our success stories</h1>
         </div>
