--- a/index.html
+++ b/index.html
@@ -591,7 +591,9 @@
         </div>
     </div>
 </header>
-<!-- modal sing in -->
+<!-- tugadi -->
+
+<!-- 6 ci modal sing in -->
 <div class="modal fade" id="exampleModalwe" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
@@ -601,12 +603,12 @@
                 </div>
                 <form>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">E-mail</label>
+                        <label for="exampleInputEmail123" class="form-label">E-mail</label>
                         <input type="email" class="form-control" id="exampleInputEmail11112" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Phone number</label>
-                        <input type="number" class="form-control" id="exampleInputPassword11234re">
+                        <label for="exampleInputPassword123" class="form-label">Phone number</label>
+                        <input type="number" class="form-control" id="exampleInputPassword">
                     </div>
                     <div class="text-center">
                         <p>or register in a convenient <br>
@@ -627,8 +629,9 @@
     </div>
 </div>
 <!-- tugadi -->
-<!-- modailsingin -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- 7 ci modailsingin -->
+<div class="modal fade" id="exampleModal12qwe" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
@@ -712,33 +715,36 @@
         </div>
     </div>
 </div>
-
 <!-- tugadi -->
-<!-- modal llok -->
-<div class="modal fade" id="id name" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- 2 ci modal can not -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
                 <div class="text-center align-items-center">
                     <img src="images/look.png" alt="">
                 </div>
-                <div class="h4 text-center">
-                    Can not log in
+                <div class="h4 itms text-center">
+                    Can not log in?
                 </div>
+                <br>
                 <form>
-                    <div class="text-center">
-                        <p>Enter you email adress or phone <br>
-                            number and we will send you a link to <br>
-                            restore access to you account.
-                        </p>
+                    <div class="text-center itms">
+                        <blockquote>
+                             Enter you email adress or phone <br>
+                             number and we will send you a link to <br>
+                             restore access to you account.
+                         </blockquote>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">E-mail</label>
+                        <label for="exampleInputEmail1" class="form-label modalemail">E-mail</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
+                    <br>
 
-                    <div class="d-grid gap-2 col-9 mx-auto">
-                        <button type="submit" class="btn btn-primary">Next</button>
+                    <div class="d-grid itms gap-2 col-9 mx-auto">
+                        <button type="submit" class="btn btn-primary">Get a login link</button>
                     </div>
 
                 </form>
@@ -747,21 +753,21 @@
     </div>
 </div>
 <!-- tugadi -->
-<!-- modal password -->
-<div class="modal fade" id="exampleModal11" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- 4 ci modal password -->
+<div class="modal fade" id="exampleModalkhb" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
-                <div class="text-center align-items-center">
-
-                    <p class="noob">fk</p>
-
-                </div>
+                    <div class="prog-pratsent row">
+                        <div class="col align-self-center text-center">
+                            <b>FK</b>
+                        </div>
+                    </div>
                 <div class="h4 text-center">
                     Farrukh Korchiev
                 </div>
                 <form>
-
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">New Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword112313123123">
@@ -782,9 +788,9 @@
     </div>
 </div>
 <!-- tuggadi -->
-<!-- hes ban password -->
 
-<div class="modal fade" id="exampleModal124" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- 5 ci hes ban password -->
+<div class="modal fade" id="exampleModal123rwq" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
@@ -807,8 +813,9 @@
     </div>
 </div>
 <!-- tugadi -->
-<!-- modallogo -->
-<div class="modal fade" id="exampleModal1256" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- 5 modallogo -->
+<div class="modal fade" id="exampleModalsafwf" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
@@ -831,20 +838,19 @@
     </div>
 </div>
 <!-- tugadi -->
-<!-- look email -->
-<div class="modal fade" id="exampleModal1212" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- 3 ci look email boldi -->
+<div class="modal fade" id="exampleModalcwacw" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
                 <div class="text-center align-items-center">
                     <img src="images/look.png" alt="">
                 </div>
-                <br><br>
                 <form>
-                    <div class="text-center">
-                        <p>The login link hes been <br>
-                            sent to your <a href="#">email</a>
-                        </p><br><br><br>
+                    <div class="text-center p-5">
+                        <p>The login link has been sent <br>
+                            to you <a href="">email</a>
+                        </p>
                     </div>
                     <div class="d-grid gap-2 col-9 mx-auto">
                         <button type="submit" class="btn btn-primary">Ok</button>
@@ -855,8 +861,9 @@
     </div>
 </div>
 <!-- tugadi -->
-<!-- modal-ligi -->
-<div class="modal fade" id="exampleModal123" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- 8 ci modal-ligi -->
+<div class="modal fade" id="exampleModalawfawf2134" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modalwidth">
         <div class="modal-content  modal-radius">
             <div class="modal-body  modlabod">
@@ -882,6 +889,8 @@
         </div>
     </div>
 </div>
+
+
 
 
 <!-- Optional JavaScript; choose one of the two! -->
