--- a/index.html
+++ b/index.html
@@ -695,12 +695,21 @@
     <div class="modal-dialog modalwidth">
         <div class="modal-content modal-radius">
             <div class="modal-body modlabod">
-                <div class="prog-pratsent row">
-                    <div class="col align-self-center text-center">
-                        <b>FK</b>
+
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+
+                        <div class="prog-pratsent row">
+                            <div class="col align-self-center text-center">
+                                <b>FK</b>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="h4 text-center">
+
+
+                <div class="h4 text-center pb-5">
                     Farrukh Korchiev
                 </div>
                 <form>
